design: edit page info area

--- a/src/main/java/bundle/message.properties
+++ b/src/main/java/bundle/message.properties
@@ -1,4 +1,5 @@
 title = \uD300 \uB9CC\uB4E4\uAE30
+desc = \uC0C8\uB85C\uC6B4 \uD300\uC744 \uB9CC\uB4E4 \uC218 \uC788\uC5B4\uC694
 teamId = \uD300 \uBC88\uD638
 teamName = \uD300\uBA85
 teamCapacity = \uD300 \uCD5C\uB300 \uC815\uC6D0
